--- a/.github/workflows/Riya-workflow.yml
+++ b/.github/workflows/Riya-workflow.yml
@@ -19,6 +19,6 @@ jobs:
           tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
           context-github: ${{ toJSON(github) }}
           job-name: 'SNOW Change'
-          change-request: '{ "attributes": {"chg_model":{"name":"standard"}, "template": "1c8e02ec47410200e90d87e8dee49057"}}'
+          change-request: '{ "attributes": {"type":"standard", "template": "1c8e02ec47410200e90d87e8dee49057"}}'
           interval: '100'
           timeout: '3600'
