Update azure-build-pipeline1.yml for Azure Pipelines

--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -115,6 +115,7 @@ stages:
                     "priority": "2",
                     "start_date": "2022-01-05 11:59:59",
                     "end_date": "2022-01-08 11:59:59",
-                    "chg_model": {"name": "dEvoPs"}
+                    "service_offering": "f07181a783303510f36cdf647daad387",
+                    "risk": "2"
                     }
                 }
