Update azure-build-pipeline1.yml for Azure Pipelines

--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -119,7 +119,7 @@ stages:
                     }
                 }
   
-  - stage: GET-UPDATE
+  - stage: GET_UPDATE change
     dependsOn: Test
     jobs:
       - job: Job_Deploy
