Update azure-build-pipeline1.yml for Azure Pipelines

--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -119,10 +119,10 @@ stages:
                     }
                 }
   
-  - stage: GET_UPDATE change
-    dependsOn: Test
+  - stage: GETUPDATEchange
+    dependsOn: Prod
     jobs:
-      - job: Job_Deploy
+      - job: Job_GETUPDATEchange
         steps:
           - task: Bash@3
             inputs:
