--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -66,7 +66,7 @@ stages:
                     [
                     {
                         "name": "alpha",
-                        "repositoryName": "DevOps-Test",
+                        "repositoryName": "$(system.teamProject)/$(build.definitionName)",
                         "version": "1.$(build.buildId)",
                         "pipelineName":"$(system.teamProject)/$(build.definitionName)",
                         "taskExecutionNumber":"$(build.buildId)",
@@ -75,7 +75,7 @@ stages:
                     },
                     {
                         "name": "beta",
-                        "repositoryName": "DevOps-Test",
+                        "repositoryName": "$(system.teamProject)/$(build.definitionName)",
                         "version": "1.$(build.buildId)",
                         "pipelineName":"$(system.teamProject)/$(build.definitionName)",
                         "taskExecutionNumber":"$(build.buildId)",
@@ -84,7 +84,7 @@ stages:
                     },
                     {
                         "name": "gamma",
-                        "repositoryName": "DevOps-Test",
+                        "repositoryName": "$(system.teamProject)/$(build.definitionName)",
                         "version": "1.$(build.buildId)",
                         "pipelineName":"$(system.teamProject)/$(build.definitionName)",
                         "taskExecutionNumber":"$(build.buildId)",
