--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,16 +5,9 @@
 
 version: 2
 updates:
-  - package-ecosystem: "junit" # See documentation for possible values
+  - package-ecosystem: "maven" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
-      time: "15:25"
-      timezone: "Asia/Kolkata"
-  
-  - package-ecosystem: "testng" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "daily"
-      time: "15:25"
+      time: "15:30"
       timezone: "Asia/Kolkata"
