--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -3,18 +3,18 @@
 
 name: GitHub Actions workflow with SNOW custom tasks
 
-# on:
+on:
 #   push:
 #     branches: [ main ]
-#    pull_request:
-#      branches: [ master ]
+   pull_request:
+     branches: [ main ]
 #   push:
 #     branches:
 #       - main
 #   pull_request:
 #     types: [opened, synchronize, reopened]
 
-on: workflow_dispatch
+# on: workflow_dispatch
 #  pull_request_target:
 #    types:
 #      - closed
