--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -45,6 +45,17 @@ stages:
               mavenAuthenticateFeed: false
               effectivePomSkip: false
               sonarQubeRunAnalysis: false
+          - task: ServiceNow-DevOps-Build-Security-Results@1
+            inputs:
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
+              securityResultAttributes: |
+                {
+                "scanner": "CheckmarxOne",
+                "projectName": "DemoProject",
+                "projectId": "75acb348-c054-4ab3-807d-e17e92a923ab",
+                "scanId": "c8053f9d-8047-44ae-8972-dc5176b7dd67",
+                "securityToolId": "b8d81b8fc3bc7110c825371f05013174"
+                }
 
   - stage: Deploy
     dependsOn: Test
@@ -92,71 +103,69 @@ stages:
                         "branchName":"$(build.sourceBranchName)"
                     }]
                 }
-  #         - task: ServiceNow-DevOps-Agent-Package-Registration@1
-  #           inputs:
-  #             connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
-  #             packageName: 'package-devops-3.0.0-SNAPSHOT.zip'
-  #             artifactsPayload: |
-  #               {
-  #                   "artifacts": [
-  #                   {
-  #                       "name": "alpha",
-  #                       "repositoryName": "DevOps-Test",
-  #                       "version": "1.$(build.buildId)",
-  #                       "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-  #                       "taskExecutionNumber":"$(build.buildId)",
-  #                       "stageName":"$(system.jobDisplayName)",
-  #                       "branchName":"$(build.sourceBranchName)"
-  #                   },
-  #                   {
-  #                       "name": "beta",
-  #                       "repositoryName": "DevOps-Test",
-  #                       "version": "1.$(build.buildId)",
-  #                       "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-  #                       "taskExecutionNumber":"$(build.buildId)",
-  #                       "stageName":"$(system.jobDisplayName)",
-  #                       "branchName":"$(build.sourceBranchName)"
-  #                   },
-  #                   {
-  #                       "name": "gamma",
-  #                       "repositoryName": "DevOps-Test",
-  #                       "version": "1.$(build.buildId)",
-  #                       "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-  #                       "taskExecutionNumber":"$(build.buildId)",
-  #                       "stageName":"$(system.jobDisplayName)",
-  #                       "branchName":"$(build.sourceBranchName)"
-  #                   }],
-  #                   "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-  #                   "taskExecutionNumber":"$(build.buildId)",
-  #                   "stageName":"$(system.jobDisplayName)",
-  #                   "branchName":"$(build.sourceBranchName)"
-  #               }
-  # - stage: Prod
-  #   dependsOn: Deploy
-  #   jobs:
-  #     - job: Job_Prod
-  #       pool:
-  #         name: server
-  #       steps:
-  #         - task: ServiceNow-DevOps-Server-Change-Acceleration@1
-  #           inputs:
-  #             connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
-  #             UpstreamJob: 'Job_Deploy'
-  #             changeRequestDetails: |
-  #               {
-  #                 "setCloseCode": false,
-  #                 "attributes": {
-  #                   "requested_by": {
-  #                       "name": "DevOps System"
-  #                   },
-  #                   "category": "DevOps",
-  #                   "priority": "2",
-  #                   "start_date": "2022-01-05 11:59:59",
-  #                   "end_date": "2022-01-08 11:59:59",
-  #                   "template": "1eddcf2b83f83510f36cdf647daad31b",
-  #                   "service_offering": null
-  #                   }
-  #               }
+          - task: ServiceNow-DevOps-Agent-Package-Registration@1
+            inputs:
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
+              packageName: 'package-devops-3.0.0-SNAPSHOT.zip'
+              artifactsPayload: |
+                {
+                    "artifacts": [
+                    {
+                        "name": "alpha",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "beta",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "gamma",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    }],
+                    "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                    "taskExecutionNumber":"$(build.buildId)",
+                    "stageName":"$(system.jobDisplayName)",
+                    "branchName":"$(build.sourceBranchName)"
+                }
+  - stage: Prod
+    dependsOn: Deploy
+    jobs:
+      - job: Job_Prod
+        pool:
+          name: server
+        steps:
+          - task: ServiceNow-DevOps-Server-Change-Acceleration@1
+            inputs:
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
+              UpstreamJob: 'Job_Deploy'
+              changeRequestDetails: |
+                {
+                  "setCloseCode": false,
+                  "attributes": {
+                    "requested_by": {
+                        "name": "DevOps System"
+                    },
+                    "category": "DevOps",
+                    "priority": "2",
+                    "start_date": "2022-01-05 11:59:59",
+                    "end_date": "2022-01-08 11:59:59"
+                    }
+                }
   
   # - stage: GETUPDATEchange
   #   dependsOn: Prod
