Update azure-build-pipeline1.yml for Azure Pipelines

--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -45,17 +45,18 @@ stages:
               mavenAuthenticateFeed: false
               effectivePomSkip: false
               sonarQubeRunAnalysis: false
-          - task: ServiceNow-DevOps-Build-Security-Results@1
-            inputs:
-              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
-              securityResultAttributes: |
-                {
-                "scanner": "CheckmarxOne", #Scanning tool and is required e.g. CheckmarxOne.
-                "projectName": "DemoProject", #Name of your CheckMarxOne project and is required. This attribute is applicable only for CheckmarxOne.
-                "projectId": "75acb348-c054-4ab3-807d-e17e92a923ab", #Id of your CheckMarxOne project and can be used instead of projectName field. This attribute is applicable only for CheckmarxOne.
-                "scanId": "c8053f9d-8047-44ae-8972-dc5176b7dd67", #CheckmarxOne scan id and is optional. This attribute is applicable only for CheckmarxOne.
-                "securityToolId": "b8d81b8fc3bc7110c825371f05013174" #Security tool onboarded in ServiceNow (sys_id of the onboarded security tool) and is optional.
-                }
+
+          # - task: ServiceNow-DevOps-Build-Security-Results@1
+          #   inputs:
+          #     connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
+          #     securityResultAttributes: |
+          #       {
+          #       "scanner": "CheckmarxOne", #Scanning tool and is required e.g. CheckmarxOne.
+          #       "projectName": "DemoProject", #Name of your CheckMarxOne project and is required. This attribute is applicable only for CheckmarxOne.
+          #       "projectId": "75acb348-c054-4ab3-807d-e17e92a923ab", #Id of your CheckMarxOne project and can be used instead of projectName field. This attribute is applicable only for CheckmarxOne.
+          #       "scanId": "c8053f9d-8047-44ae-8972-dc5176b7dd67", #CheckmarxOne scan id and is optional. This attribute is applicable only for CheckmarxOne.
+          #       "securityToolId": "b8d81b8fc3bc7110c825371f05013174" #Security tool onboarded in ServiceNow (sys_id of the onboarded security tool) and is optional.
+          #       }
 
   - stage: Deploy
     dependsOn: Test
