--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -70,80 +70,80 @@ stages:
                 # Write your commands here                  
                 echo 'Hello world'
 
-          # - task: ServiceNow-DevOps-Agent-Artifact-Registration@1
-          #   inputs:
-          #     connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
-          #     artifactsPayload: |
-          #       {
-          #           "artifacts":
-          #           [
-          #           {
-          #               "name": "alpha",
-          #               "repositoryName": "$(build.definitionName)",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           },
-          #           {
-          #               "name": "beta",
-          #               "repositoryName": "$(build.definitionName)",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           },
-          #           {
-          #               "name": "gamma",
-          #               "repositoryName": "$(build.definitionName)",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           }]
-          #       }
-          # - task: ServiceNow-DevOps-Agent-Package-Registration@1
-          #   inputs:
-          #     connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
-          #     packageName: 'package-devops-3.0.0-SNAPSHOT.zip'
-          #     artifactsPayload: |
-          #       {
-          #           "artifacts": [
-          #           {
-          #               "name": "alpha",
-          #               "repositoryName": "DevOps-Test",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           },
-          #           {
-          #               "name": "beta",
-          #               "repositoryName": "DevOps-Test",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           },
-          #           {
-          #               "name": "gamma",
-          #               "repositoryName": "DevOps-Test",
-          #               "version": "1.$(build.buildId)",
-          #               "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #               "taskExecutionNumber":"$(build.buildId)",
-          #               "stageName":"$(system.jobDisplayName)",
-          #               "branchName":"$(build.sourceBranchName)"
-          #           }],
-          #           "pipelineName":"$(system.teamProject)/$(build.definitionName)",
-          #           "taskExecutionNumber":"$(build.buildId)",
-          #           "stageName":"$(system.jobDisplayName)",
-          #           "branchName":"$(build.sourceBranchName)"
-          #       }
+          - task: ServiceNow-DevOps-Agent-Artifact-Registration@1
+            inputs:
+              connectedServiceName: 'devopstokyo139-Basic Project1-ServiceNow DevOps Service Connection'
+              artifactsPayload: |
+                {
+                    "artifacts":
+                    [
+                    {
+                        "name": "alpha",
+                        "repositoryName": "$(build.definitionName)",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "beta",
+                        "repositoryName": "$(build.definitionName)",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "gamma",
+                        "repositoryName": "$(build.definitionName)",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    }]
+                }
+          - task: ServiceNow-DevOps-Agent-Package-Registration@1
+            inputs:
+              connectedServiceName: 'devopstokyo139-Basic Project1-ServiceNow DevOps Service Connection'
+              packageName: 'package-devops-3.0.0-SNAPSHOT.zip'
+              artifactsPayload: |
+                {
+                    "artifacts": [
+                    {
+                        "name": "alpha",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "beta",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    },
+                    {
+                        "name": "gamma",
+                        "repositoryName": "DevOps-Test",
+                        "version": "1.$(build.buildId)",
+                        "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                        "taskExecutionNumber":"$(build.buildId)",
+                        "stageName":"$(system.jobDisplayName)",
+                        "branchName":"$(build.sourceBranchName)"
+                    }],
+                    "pipelineName":"$(system.teamProject)/$(build.definitionName)",
+                    "taskExecutionNumber":"$(build.buildId)",
+                    "stageName":"$(system.jobDisplayName)",
+                    "branchName":"$(build.sourceBranchName)"
+                }
 
           
   - stage: Prod
@@ -155,7 +155,7 @@ stages:
         steps:
           - task: ServiceNow-DevOps-Server-Change-Acceleration@1
             inputs:
-              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
+              connectedServiceName: 'devopstokyo139-Basic Project1-ServiceNow DevOps Service Connection'
               UpstreamJob: 'Job_Deploy'
               changeRequestDetails: |
                 {
