--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -168,7 +168,8 @@ stages:
                     "priority": "2",
                     "start_date": "2022-01-05 11:59:59",
                     "end_date": "2022-01-08 11:59:59",
-                    "chg_model": {"name": "devops"}
+                    "chg_model": {"name": "devops"},
+                    "assignment_group": "a715cd759f2002002920bde8132e7018"
                     }
                 }
   
