--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -172,6 +172,14 @@ stages:
                     "assignment_group": "a715cd759f2002002920bde8132e7018"
                     }
                 }
+
+          - task: InvokeRESTAPI@1
+            inputs:
+              connectionType: 'connectedServiceName'
+              serviceConnection: 'devopstokyo139-Basic Project1-Generic Connection'
+              method: 'POST'
+              urlSuffix: 'api/sn_devops/v1/devops/orchestration/changeControl?toolId=a104cc8c47d93110bf04bf15126d4378'
+              waitForCompletion: 'false'
   
   # - stage: GETUPDATEchange
   #   dependsOn: Prod
