Update azure-build-pipeline1.yml for Azure Pipelines

--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -178,6 +178,12 @@ stages:
               connectionType: 'connectedServiceName'
               serviceConnection: 'devopstokyo139-Basic Project1-Generic Connection'
               method: 'POST'
+              body: |
+                {
+                "buildNumber":"$(build.buildId)",
+                "isMultiBranch":"false",
+                "branchName":"$(build.sourceBranchName)"
+                }
               urlSuffix: 'api/sn_devops/v1/devops/orchestration/changeControl?toolId=a104cc8c47d93110bf04bf15126d4378&projectId=460440cc47d93110bf04bf15126d439b'
               waitForCompletion: 'true'
   
