--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -182,7 +182,7 @@ stages:
                 {
                   "buildNumber":"$(build.buildId)",
                   "isMultiBranch":"false",
-                  "branchName":"$(build.sourceBranchName)".
+                  "branchName":"$(build.sourceBranchName)",
                   "changeRequestDetails":{
                     "setCloseCode": true,
                     "attributes":{
