--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -293,7 +293,7 @@ jobs:
                           "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
                           "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
                           "test_plan": "Testing if the software was successfully deployed",
-                          "chg_model": {"name": "normal"}
+                          "type": "normal"
                       }
                   }'
 
