--- a/.github/workflows/common-repo-workflow.yml
+++ b/.github/workflows/common-repo-workflow.yml
@@ -144,6 +144,12 @@ jobs:
     needs: sonarScan
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v4.0.0
+      with:
+        # Repository name with owner. For example, actions/checkout
+        repository: # optional, default is ${{ github.repository }}
+
     - name: ServiceNow DevOps Security Results
       uses: ServiceNow/servicenow-devops-security-result@v2.0.0
       with:
